# Forex-Impact-News-Guard

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.codex/: hooks.json
.github/workflows/: cron.yml  keepalive.yml  (+2 more)
.state/: events.json  keepalive.json  runtime.json  settings.json
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DEPLOY_GITHUB_ACTIONS_PAGES.md  DEPLOY_ORACLE_ALWAYS_FREE.md  DEPLOY_RECOMMENDATIONS.md  GIT_HANDOFF.md  LESSONS_LEARNED.md  OPERATIONS.md  OVERVIEW.md  PENDING.md  PROJECT.md  PROJECT_CONTEXT.md  ROADMAP.md  START_HERE.md  api-contract.md  architecture.md  changelog.md  data-model.md  decisions.md  domain-model.md  glossary.md  observability.md  onboarding.md  progress.md  release-process.md  requirements.md  risks.md  security.md  testing.md  todo.md
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
public/: app.js  index.html  state.example.json  styles.css
scripts/: apply_dashboard_settings.py  build_dashboard.py  repair_pydantic_core.py  run_pytest.cmd  send_telegram_smoke_test.py
tests/: test_alert_planner.py  test_app.py  test_apply_dashboard_settings.py  test_build_dashboard.py  test_event_repository.py  test_event_scheduler.py  test_forex_factory_integration.py  test_forex_factory_sync.py  test_notification_formatter.py  test_runtime_repository.py  test_runtime_scheduler.py  test_settings_and_events_api.py  test_settings_service.py  test_telegram_notifier.py  test_telegram_smoke_test.py  test_worker.py
(+27 files in other folders)
